<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">远行家</string>

    <!-- 按钮文字信息 -->
    <string name="btn_submit">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_delete">删除</string>
    <string name="btn_update">更新</string>

    <!-- 性别 -->
    <string name="gender_male">先生</string>
    <string name="gender_female">女士</string>

    <!-- 自定义提示信息 -->
    <string name="loading_titile">加载中</string>
    <string name="loading_content">正在载入...</string>
    <string name="time_title_hint">温馨提示</string>

    <!-- 下拉刷新 -->
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="pull_to_refresh_update_at">上次刷新：%s</string>

    <!-- 无网络信息 -->
    <string name="not_network_title">网络未连接</string>
    <string name="not_network_content">请开启网络连接，\n以便获取周围餐厅信息</string>
    <string name="not_network_submit">开启</string>
    <string name="not_network_cancel">取消</string>
    <string name="not_network_title2">无网络连接</string>

    <!-- 品牌详情 -->
    <string name="brand_info_home">首页</string>
    <string name="brand_info_tmail">天猫商城</string>
    <string name="brand_info_pc">官方网站</string>
    <string name="brand_info_weixin">官方微信</string>
    <string name="brand_service_phone">服务热线</string>
    <string name="brand_near_distributor">附近经销商</string>
    <string name="brand_make_maintenance">预约保养</string>
    <string name="brand_make_test_drive">预约试驾</string>
    <string name="brand_online_advice">在线咨询</string>
    <string name="brand_show_info">查看详情</string>
    
    <!-- 新闻 -->
    <string name="news_info_title">新闻详情</string>
    <string name="news_top1">头条新闻：%s</string>

    <!-- 品牌详情-在线咨询 -->
    <string name="feedback_content_hint">请输入您的咨询问题</string>
    <string name="feedback_user_hint">请输入姓名</string>
    <string name="feedback_phone_hint">请输入电话</string>
    <string name="feedback_submit">确认</string>
    <string name="feedback_title">在线咨询</string>

    <!-- 登录 -->
    <string name="login_other_hint">您还可以选择下列方式登录</string>
    <string name="login_user_hint">请输入手机或邮箱</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_title">登录</string>
    <string name="forget_password">忘记密码？</string>
    
    <!-- 设置 -->
    <string name="setting_title">设置</string>
    <string name="setting_logout">退出登录</string>
    <string name="setting_clear_cache">清除浏览缓存</string>
    <string name="setting_cache_size">%sM</string>

    <!-- 注册 -->
    <string name="regiter_title">注册</string>
    <string name="regiter_name_hint">请输入手机号码</string>

    <!-- 昵称 -->
    <string name="user_nickname">昵称</string>

    <!-- 实名认证 -->
    <string name="user_auth">实名认证</string>
    <string name="user_upload_idcard">上传图片（身份证/营业执照）</string>
    <string name="user_auth_name_hint">请输入真实姓名</string>
    <string name="user_auth_idcard_number_hint">请输入真实身份证号</string>
    <string name="user_auth_submit">提交</string>
    <string name="user_get_verify_code">获取验证码</string>

    <!-- 用户信息 -->
    <string name="user_setting_title">设置个人资料</string>
    <string name="user_setting_avatar">头像</string>
    <string name="user_setting_nickname">昵称</string>
    <string name="user_setting_account_name">登录账号</string>
    <string name="user_setting_gender">性别</string>
    <string name="user_setting_verify_user">实名认证</string>
    <string name="user_setting_verify_phone">验证手机号</string>
    <string name="user_setting_logout">退出登录</string>
    
    <!-- 注册验证码验证 -->
    <string name="user_register_verify_code_title">注册码验证</string>
    <string name="user_register_verify_code_title_hint">我们已发送了验证码到您的手机</string>
    <string name="user_register_verify_code_hint">请输入验证码</string>
    <string name="user_register_next">下一步</string>
    
    <!-- dialog - 日期 -->
    <string name="dialog_date_title">日期</string>
    <string-array name="month_item">
        <item>1月</item>
        <item>2月</item>
        <item>3月</item>
        <item>4月</item>
        <item>5月</item>
        <item>6月</item>
        <item>7月</item>
        <item>8月</item>
        <item>9月</item>
        <item>10月</item>
        <item>11月</item>
        <item>12月</item>
    </string-array>

    <!-- Toast -->
    <string name="toast_user_name_is_empty">用户名不能为空</string>
    <string name="toast_user_password_is_empty">密码输入错误，请输入大于6为的字母或数字</string>
    <string name="toast_verify_code_is_empty">验证码不能为空</string>
    <string name="toast_verify_code_is_success">验证码发送成功</string>
    <string name="toast_vo_is_empty">获取信息失败，请重试</string>
    <string name="toast_send_success">发送成功</string>
    
       <!-- xListView -->
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <!-- 客服手机号 -->
    <string name="service_phone">123456888</string>
    
    <!-- PayActivity -->
    <string name="pay_by_wx">客户端签名微信支付</string>
    <string name="pay_by_wxap">服务器端签名微信支付</string>
    <string name="check_pay">检查微信版本是否支持支付</string>
    <string name="input_reqkey">输入reqkey</string>
    <string name="input_package_value">输入package value</string>
    <string name="input_sign">输入sign</string>
    <string name="getting_access_token">正在加载中...</string>
    <string name="get_access_token_succ">获取access token成功</string>
    <string name="get_access_token_fail" formatted="false">获取access token失败，原因%s</string>
    <string name="getting_prepayid">正在获取预支付订单...</string>
    <string name="paying">支付中</string>
    <string name="get_prepayid_succ">获取prepayid成功</string>
    <string name="get_prepayid_fail" formatted="false">获取prepayid失败，原因%s</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="food_change_msg">菜品信息有变动，请留意你的购物车</string>

    <string name="user_sbl_auth_hint">认证将会在3个工作日完成，我们将电话与您联系，成为斯巴鲁VIP用户您将享受到丰富的线下活动有限参与权，免费体验自家游线路，半价畅游香格里拉等诸多福利。</string>

    <!-- 百度推送 -->
    <string name="login">登录</string>
    <string name="text_btn_init">百度账号绑定</string>
    <string name="text_btn_init1">更换百度账号</string>
    <string name="text_btn_on_push">打开Push</string>
    <string name="text_btn_off_push">关闭Push</string>
    <string name="log_tip">日志：</string>
    <string name="clear_log">清除日志</string>
    <string name="text_btn_rich">富媒体消息</string>
    <string name="text_btn_initAK">无账号绑定</string>
    <string name="text_btn_setTags">设置标签</string>
    <string name="text_btn_delTags">删除标签</string>
    <string name="text_btn_senior">高级功能</string>
    <string name="text_btn_set">设置</string>
    <string name="text_media_title">富媒体消息列表</string>
    <string name="media">Rich Media</string>
    <string name="custom_text_hint">用户自定义行为打开的Activity</string>
    <string name="tags_hint">请输入多个标签，以英文逗号隔开</string>
    <string name="text_btn_aidl">轻应用AIDL</string>
    <string name="text_btn_off_lightapp">关闭所有轻消息</string>
    <string name="text_btn_off_app_msg">加入黑名单</string>
    <string name="text_btn_unread_only_msg">只获取未读消息</string>
    <string name="text_btn_on_shortcut">生成快捷图标</string>
    <string name="text_btn_showTags">列举标签</string>
    <string name="text_btn_unbind">解绑</string>
    <string name="text_btn_setunDisturb">免打扰时段</string>
    <string name="text_toast">设置成功，免打扰时段为：\n%1$s - %2$s</string>
    <string name="text_about">百度Push Android SDK 4.6.3\n\n更新时间:2016年5月11日\nChange Log：\n修复低端机器上WebView加载时可能的安全隐患。\n修复特殊场景下Push无法后台自启动的bug。\n暂停PushKeepAlive机制，防止小米部分机器上异常情况下的焦点丢失。</string>
    <string name="text_help">百度hi官方技术讨论群：1405944\nQQ群：324533810（可加）\n云推送微信公众账号：云推送（微信号：baidu-push）\n</string>
</resources>