<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <include layout="@layout/view_navigation" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/global_padding_mid"
        android:gravity="center"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/phone_tv"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/global_padding_small"
            android:layout_marginRight="@dimen/global_padding_small"
            android:layout_weight="1"
            android:background="@drawable/bg_white_round"
            android:gravity="center_vertical"
            android:hint="@string/regiter_name_hint"
            android:padding="@dimen/global_padding_small"
            android:textSize="@dimen/sp_14" />

        <com.tourism.app.widget.view.CustomButton
            android:id="@+id/get_verify_btn"
            android:layout_width="97dp"
            android:layout_height="38dp"
            android:layout_marginRight="@dimen/global_padding_small"
            android:background="@drawable/btn_green2_round"
            android:onClick="onClick"
            android:text="@string/user_get_verify_code"
            android:textColor="@color/text_white"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <EditText
        android:id="@+id/verify_code_tv"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_margin="@dimen/global_padding_small"
        android:background="@drawable/bg_white_round"
        android:gravity="center_vertical"
        android:hint="@string/user_register_verify_code_hint"
        android:padding="@dimen/global_padding_small"
        android:textSize="@dimen/sp_14" />

    <com.tourism.app.widget.view.CustomButton
        android:id="@+id/verify_submit_btn"
        android:layout_width="fill_parent"
        android:layout_height="38dp"
        android:layout_marginLeft="@dimen/global_padding_small"
        android:layout_marginRight="@dimen/global_padding_small"
        android:layout_marginTop="35dp"
        android:background="@drawable/btn_blue2_round"
        android:onClick="onClick"
        android:text="@string/feedback_submit"
        android:textColor="@color/text_white"
        android:textSize="@dimen/sp_16" />

</LinearLayout>