<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_user"
    android:orientation="vertical" >

    <include layout="@layout/view_navigation" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/user_register_verify_code_title_hint"
        android:textColor="@color/line_color"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/user_phone_tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/global_padding_mid"
        android:gravity="center"
        android:text="+86 18601230123"
        android:textColor="@color/line_color"
        android:textSize="@dimen/sp_21" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/global_line_size"
        android:layout_marginTop="@dimen/global_padding_mid2"
        android:background="@color/line_color" />

    <EditText
        android:id="@+id/user_register_verify_code_et"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/bg_white"
        android:hint="@string/user_register_verify_code_hint"
        android:paddingLeft="@dimen/global_padding_small"
        android:textSize="@dimen/sp_12" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/global_line_size"
        android:background="@color/line_color" />

    <com.tourism.app.widget.view.CustomButton
        android:id="@+id/login_submit_btn"
        android:layout_width="fill_parent"
        android:layout_height="38dp"
        android:layout_marginLeft="@dimen/global_padding_small"
        android:layout_marginRight="@dimen/global_padding_small"
        android:layout_marginTop="@dimen/global_padding_mid2"
        android:background="@drawable/btn_blue2_round"
        android:onClick="onClick"
        android:text="@string/user_register_next"
        android:textColor="@color/text_white"
        android:textSize="@dimen/sp_16" />

</LinearLayout>