<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_user"
    android:orientation="vertical" >

    <include layout="@layout/view_navigation"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <com.tourism.app.widget.view.CustomButton
            android:id="@+id/login_sina_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/global_padding_small"
            android:background="@drawable/btn_sina"
            android:onClick="onClick" />

        <com.tourism.app.widget.view.CustomButton
            android:id="@+id/login_weixin_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_weixin"
            android:onClick="onClick" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/global_padding_mid2"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/global_line_size"
            android:layout_marginLeft="@dimen/global_padding_small"
            android:layout_weight="1"
            android:background="@color/line_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/global_padding_little"
            android:layout_marginRight="@dimen/global_padding_little"
            android:text="@string/login_other_hint"
            android:textColor="@color/text_gray_light"
            android:textSize="@dimen/sp_10" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/global_line_size"
            android:layout_marginRight="@dimen/global_padding_small"
            android:layout_weight="1"
            android:background="@color/line_color" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/global_line_size"
        android:layout_marginTop="@dimen/global_padding_mid2"
        android:background="@color/line_color" />

    <EditText
        android:id="@+id/login_user_et"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/bg_white"
        android:hint="@string/login_user_hint"
        android:paddingLeft="@dimen/global_padding_small"
        android:textSize="@dimen/sp_12" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/global_line_size"
        android:layout_marginLeft="@dimen/global_padding_little"
        android:layout_marginRight="@dimen/global_padding_little"
        android:background="@color/line_color" />

    <EditText
        android:id="@+id/login_password_et"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/bg_white"
        android:hint="@string/login_password_hint"
        android:paddingLeft="@dimen/global_padding_small"
        android:password="true"
        android:textSize="@dimen/sp_12" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/global_line_size"
        android:background="@color/line_color" />
	
    <com.tourism.app.widget.view.CustomButton
    	android:id="@+id/forget_password_btn"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:padding="5dp"
    	android:text="@string/forget_password"
    	android:textColor="@color/text_red"
    	android:textSize="@dimen/sp_12"
    	android:layout_gravity="right"
    	android:onClick="onClick"
    	android:background="@drawable/btn_tran_selector"
    />
    
    <com.tourism.app.widget.view.CustomButton
        android:id="@+id/login_submit_btn"
        android:layout_width="fill_parent"
        android:layout_height="38dp"
        android:layout_marginLeft="@dimen/global_padding_small"
        android:layout_marginRight="@dimen/global_padding_small"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_blue2_round"
        android:onClick="onClick"
        android:text="@string/login_title"
        android:textColor="@color/text_white"
        android:textSize="@dimen/sp_16" />

</LinearLayout>