<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/brand_header_icon_1_iv"
        android:layout_width="fill_parent"
        android:layout_height="169dp"
        android:scaleType="fitXY"
        android:src="@drawable/img_default_bannber" />

    <ImageView
        android:id="@+id/brand_header_icon_2_iv"
        android:layout_width="fill_parent"
        android:layout_height="248dp"
        android:scaleType="fitXY"
        android:src="@drawable/img_default_bannber" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_brand_header"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/global_padding_mid" >

            <com.tourism.app.widget.view.CustomButton
                android:id="@+id/header_service_phone_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/global_padding_mid"
                android:layout_weight="1"
                android:background="@drawable/btn_blue_round"
                android:onClick="onClick"
                android:padding="@dimen/global_padding_little"
                android:text="@string/brand_service_phone"
                android:textColor="@color/text_white" />

            <com.tourism.app.widget.view.CustomButton
                android:id="@+id/header_near_distributor_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_blue_round"
                android:onClick="onClick"
                android:padding="@dimen/global_padding_little"
                android:text="@string/brand_near_distributor"
                android:textColor="@color/text_white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/global_padding_mid" >

            <com.tourism.app.widget.view.CustomButton
                android:id="@+id/header_show_info_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/global_padding_mid"
                android:layout_weight="1"
                android:background="@drawable/btn_blue_round"
                android:onClick="onClick"
                android:padding="@dimen/global_padding_little"
                android:text="@string/brand_show_info"
                android:textColor="@color/text_white" />

            <com.tourism.app.widget.view.CustomButton
                android:id="@+id/header_make_test_drive_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_blue_round"
                android:onClick="onClick"
                android:padding="@dimen/global_padding_little"
                android:text="@string/brand_make_test_drive"
                android:textColor="@color/text_white" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>