<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical" >

    <com.tourism.app.widget.view.CustomButton
        android:id="@+id/home_tv"
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:background="@color/bg_gray"
        android:drawableLeft="@drawable/icon_brand_home"
        android:drawablePadding="@dimen/global_padding_small"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:paddingLeft="@dimen/content_padding_left"
        android:text="@string/brand_info_home"
        android:textColor="@color/text_blue"
        android:textSize="@dimen/sp_21" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/global_line_size"
        android:layout_marginLeft="@dimen/global_padding_small"
        android:layout_marginRight="@dimen/global_padding_small"
        android:background="@color/text_blue" />

    <com.tourism.app.widget.view.CustomButton
        android:id="@+id/tmail_tv"
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:background="@color/bg_gray"
        android:drawableLeft="@drawable/icon_brand_tmail"
        android:drawablePadding="@dimen/global_padding_small"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:paddingLeft="@dimen/content_padding_left"
        android:text="@string/brand_info_tmail"
        android:textColor="@color/text_blue"
        android:textSize="@dimen/sp_21" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/global_line_size"
        android:layout_marginLeft="@dimen/global_padding_small"
        android:layout_marginRight="@dimen/global_padding_small"
        android:background="@color/text_blue" />

    <com.tourism.app.widget.view.CustomButton
        android:id="@+id/pc_tv"
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:background="@color/bg_gray"
        android:drawableLeft="@drawable/icon_brand_tv"
        android:drawablePadding="@dimen/global_padding_small"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:paddingLeft="@dimen/content_padding_left"
        android:text="@string/brand_info_pc"
        android:textColor="@color/text_blue"
        android:textSize="@dimen/sp_21" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/global_line_size"
        android:layout_marginLeft="@dimen/global_padding_small"
        android:layout_marginRight="@dimen/global_padding_small"
        android:background="@color/text_blue" />

    <com.tourism.app.widget.view.CustomButton
        android:id="@+id/weixin_tv"
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:background="@color/bg_gray"
        android:drawableLeft="@drawable/icon_brand_weixin"
        android:drawablePadding="@dimen/global_padding_small"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:paddingLeft="@dimen/content_padding_left"
        android:text="@string/brand_info_weixin"
        android:textColor="@color/text_blue"
        android:textSize="@dimen/sp_21" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/global_line_size"
        android:layout_marginLeft="@dimen/global_padding_small"
        android:layout_marginRight="@dimen/global_padding_small"
        android:background="@color/text_blue" />

</LinearLayout>